force-app/main/default/objects/Temporal_Fianzas__c/Temporal_Fianzas__c.object-meta.xml
<CustomObject>
    <label>Temporal Fianza</label>
    <nameField>
        <label>Temporal Fianza</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Fianzas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>