force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>FI_ALUMNO__c</fullName>
    <label>FI_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>