force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_BARCO__c.field-meta.xml
<CustomField>
    <fullName>FI_BARCO__c</fullName>
    <label>FI_BARCO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>