force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_FECHA__c.field-meta.xml
<CustomField>
    <fullName>FI_FECHA__c</fullName>
    <label>FI_FECHA</label>
    <type>Date</type>
</CustomField>