force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_FECHAD__c.field-meta.xml
<CustomField>
    <fullName>FI_FECHAD__c</fullName>
    <label>FI_FECHAD</label>
    <type>Date</type>
</CustomField>