force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_FECHAP__c.field-meta.xml
<CustomField>
    <fullName>FI_FECHAP__c</fullName>
    <label>FI_FECHAP</label>
    <type>Date</type>
</CustomField>