force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_IMPORTE__c.field-meta.xml
<CustomField>
    <fullName>FI_IMPORTE__c</fullName>
    <label>FI_IMPORTE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>