force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_INVERSA__c.field-meta.xml
<CustomField>
    <fullName>FI_INVERSA__c</fullName>
    <label>FI_INVERSA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>