force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_LUGAR__c.field-meta.xml
<CustomField>
    <fullName>FI_LUGAR__c</fullName>
    <label>FI_LUGAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>