force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_NIVEL__c.field-meta.xml
<CustomField>
    <fullName>FI_NIVEL__c</fullName>
    <label>FI_NIVEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>