force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_NUMFIA__c.field-meta.xml
<CustomField>
    <fullName>FI_NUMFIA__c</fullName>
    <label>FI_NUMFIA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>