force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_NUMORI__c.field-meta.xml
<CustomField>
    <fullName>FI_NUMORI__c</fullName>
    <label>FI_NUMORI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>