force-app/main/default/objects/Temporal_Fianzas__c/fields/FI_ORIGEN__c.field-meta.xml
<CustomField>
    <fullName>FI_ORIGEN__c</fullName>
    <label>FI_ORIGEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>