force-app/main/default/objects/Temporal_Fianzas__c/fields/NUM_MOV_COBPAG__c.field-meta.xml
<CustomField>
    <fullName>NUM_MOV_COBPAG__c</fullName>
    <label>NUM_MOV_COBPAG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>