force-app/main/default/objects/Temporal_Fianzas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>id__c</columns>
    <columns>FI_NUMFIA__c</columns>
    <columns>FI_FECHA__c</columns>
    <columns>FI_ORIGEN__c</columns>
    <columns>FI_NUMORI__c</columns>
    <columns>FI_IMPORTE__c</columns>
    <columns>FI_FECHAP__c</columns>
    <columns>FI_FECHAD__c</columns>
    <columns>Estado__c</columns>
    <columns>Tipo_Error__c</columns>
    <columns>Benefit_Assignment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado__c</field>
        <operation>equals</operation>
        <value>Procesado</value>
    </filters>
    <label>All Records</label>
</ListView>